Services/media/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.zlaya.tech`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: oidc-auth
          namespace: sonarr
        - name: default-headers
          namespace: default
  tls: {}
